utils, names, nodes, and allow creation of family

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,9 @@
   
   <!-- app -->
   <script src="js/ambra_3_node.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/node.js"></script>
+  <script src="js/names.js"></script>
   
   <!-- bootstrap the app... -->
   <script>
