generate non-inbred families

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <!-- vendor css -->
   <link href="vendor/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="vendor/css/animate.min.css" rel="stylesheet" type="text/css">
   
   <!-- app css -->
   <link href="css/ambra_3_node.css" rel="stylesheet" type="text/css">
@@ -62,8 +63,8 @@
   <!-- app -->
   <script src="js/ambra_3_node.js"></script>
   <script src="js/utils.js"></script>
-  <script src="js/node.js"></script>
   <script src="js/names.js"></script>
+  <script src="js/node.js"></script>
   
   <!-- bootstrap the app... -->
   <script>
