--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   </div><!-- #root.container -->
   
   <!-- vendor -->
-  <script src="vendor/js/jquery-3.2.1.slim.min.js"></script>
+  <script src="vendor/js/jquery-3.2.1.min.js"></script>
   <script src="vendor/js/popper.min.js"></script>
   <script src="vendor/js/bootstrap.min.js"></script>
   
