--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,72 @@
     <div id="content" class="hidden">
       content...
     </div>
-	
+    <!--
+    <div id="test" class="hidden">
+      <ul>
+
+      <li><a href="#"> Level 1 </a>
+
+          <ul>
+
+          <li><a href="#"> Level 1.1 </a>
+
+              <ul>
+
+              <li><a href="#"> Level 1.1.1 </a></li>
+
+              <li><a href="#"> Level 1.1.2 </a></li>
+
+              <li><a href="#"> Level 1.1.3 </a></li>
+
+              <li><a href="#"> Level 1.1.4 </a></li>
+
+              </ul>
+
+          </li>
+
+          <li><a href="#"> Level 1.2 </a>
+
+              <ul>
+
+              <li><a href="#"> Level 1.2.1 </a></li>
+
+              <li><a href="#"> Level 1.2.2 </a></li>
+
+              <li><a href="#"> Level 1.2.3 </a></li>
+
+              <li><a href="#"> Level 1.2.4 </a></li>
+
+              </ul>
+
+          </li>
+
+          <li><a href="#"> Level 1.3 </a>
+
+              <ul>
+
+              <li><a href="#"> Level 1.3.1 </a></li>
+
+              <li><a href="#"> Level 1.3.2 </a></li>
+
+              <li><a href="#"> Level 1.3.3 </a></li>
+
+              <li><a href="#"> Level 1.3.4 </a></li>
+
+              </ul>
+
+          </li>
+
+          </ul>
+
+      </li>
+
+    </ul>
+
+    </div>
+    -->
   </div><!-- #root.container -->
-  
+
   <!-- vendor -->
   <script src="vendor/js/jquery-3.2.1.min.js"></script>
   <script src="vendor/js/popper.min.js"></script>
@@ -65,6 +128,10 @@
   <script src="js/utils.js"></script>
   <script src="js/names.js"></script>
   <script src="js/node.js"></script>
+  
+  <!-- animate tree view -->
+  <link href="vendor/plugins/animated-tree-view/style.css" rel="stylesheet" type="text/css">
+  <script src="vendor/plugins/animated-tree-view/MultiNestedList.js"></script>
   
   <!-- bootstrap the app... -->
   <script>
