fix display issues

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
   
   <!-- animate tree view -->
   <link href="vendor/plugins/animated-tree-view/style.css" rel="stylesheet" type="text/css">
+  <link href="css/animated-tree-view-fixes.css" rel="stylesheet" type="text/css">
   <script src="vendor/plugins/animated-tree-view/MultiNestedList.js"></script>
   
   <!-- bootstrap the app... -->
